refactor: rename staff member select to case vet and remove herd size input

--- a/src/server/tbcase-case-details/case-details.njk
+++ b/src/server/tbcase-case-details/case-details.njk
@@ -329,10 +329,10 @@
                 </div>
                 <div class="govuk-grid-column-one-quarter">
                   {{ govukSelect({
-                    id: "staff-member",
-                    name: "staff-member",
+                    id: "case-vet",
+                    name: "case-vet",
                     label: {
-                      text: "Assigned Staff",
+                      text: "Case Vet",
                       classes: "govuk-label--s"
                     },
                     items: [
@@ -341,17 +341,6 @@
                       { value: "staff2", text: "A. Jones" },
                       { value: "staff3", text: "M. Brown" }
                     ]
-                  }) }}
-                </div>
-                <div class="govuk-grid-column-one-quarter">
-                  {{ govukInput({
-                    label: {
-                      text: "Herd Size",
-                      classes: "govuk-label--s"
-                    },
-                    id: "herd-size",
-                    name: "herd-size",
-                    value: "150"
                   }) }}
                 </div>
                 <div class="govuk-grid-column-one-quarter">
