Implement new endpoint

--- a/src/server/tbcase-case-details/case-details.njk
+++ b/src/server/tbcase-case-details/case-details.njk
@@ -272,12 +272,7 @@
                       text: "Test Result",
                       classes: "govuk-label--s"
                     },
-                    items: [
-                      { value: "", text: "Please select" },
-                      { value: "negative", text: "Negative", selected: true },
-                      { value: "positive", text: "Positive" },
-                      { value: "inconclusive", text: "Inconclusive" }
-                    ]
+                    items: tbResultItems
                   }) }}
                 </div>
                 <div class="govuk-grid-column-one-quarter">
