--- a/src/server/tbcase-case-details/case-details.njk
+++ b/src/server/tbcase-case-details/case-details.njk
@@ -251,13 +251,7 @@
                       text: "Financial Unit",
                       classes: "govuk-label--s"
                     },
-                    items: [
-                      { value: "", text: "Please select" },
-                      { value: "EMFP", text: "EMFP", selected: true },
-                      { value: "Devon", text: "Devon" },
-                      { value: "Cornwall", text: "Cornwall" },
-                      { value: "Dorset", text: "Dorset" }
-                    ]
+                    items: finishingUnitItems
                   }) }}
                 </div>
               </div>
