Implement CPH search functionality with validation and error handling; add controller, routes, and views

--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -55,6 +55,9 @@
         <h2 class="govuk-heading-m">Application Pages</h2>
         <ul class="govuk-list govuk-list--bullet">
           <li>
+            <a href="/cph-search" class="govuk-link">Search for Holding (CPH)</a>
+          </li>
+          <li>
             <a href="/tbcase/case-details" class="govuk-link">TB Case Form - Exeter Reactor Removals</a>
           </li>
           <li>and lots more... 😎</li>
